--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -380,5 +380,7 @@
     <string name="enter_your_valid_email">Enter Your valid email. We will send \n you your password right away.</string>
     <string name="colleagues">Colleagues</string>
     <string name="search_for_colleagues">Search for colleagues</string>
+    <string name="take_photo_small">Take Photo</string>
+    <string name="select_photo_small">Select Photo</string>
 
 </resources>
