--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -382,5 +382,7 @@
     <string name="search_for_colleagues">Search for colleagues</string>
     <string name="take_photo_small">Take Photo</string>
     <string name="select_photo_small">Select Photo</string>
+    <string name="select_video">Select Video</string>
+    <string name="record_video">Record Video</string>
 
 </resources>
