replace infomation with about

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -224,7 +224,7 @@
     <string name="select_category">Select category</string>
     <string name="choose_category">Choose category</string>
     <string name="none">None</string>
-    <string name="information">Information</string>
+    <string name="information">About</string>
     <string name="next">Next</string>
 
     <!-- NEW STRINGS -->
