1 to 72 and days ago in recent

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -384,5 +384,7 @@
     <string name="select_photo_small">Select Photo</string>
     <string name="select_video">Select Video</string>
     <string name="record_video">Record Video</string>
+    <string name="_days_ago">days ago</string>
+    <string name="yesterday">yesterday</string>
 
 </resources>
