--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <!-- new errors -->
     <string name="e_email_missing">Your email is missing</string>
     <string name="e_username_not_exist">This username does not exist</string>
+    <string name="e_user_not_found">User not found</string>
 
     <!-- Enterprise strings -->
     <string name="spika_big">SPIKA ENTERPRISE</string>
