--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -390,5 +390,6 @@
     <string name="_days_ago">days ago</string>
     <string name="yesterday">yesterday</string>
     <string name="remove_photo">Remove Photo</string>
+    <string name="invalid_phone_number">Invalid Phone Number</string>
 
 </resources>
