String to match iOS

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -244,7 +244,7 @@
     <string name="login_empty_email">Email is required</string>
     <string name="login_invalid_email">Email is not valid</string>
     <string name="login_empty_password">Password is required</string>
-    <string name="new_passwords_not_identical">Passwords are not identical.</string>
+    <string name="new_passwords_not_identical">Passwords does not match.</string>
     <string name="password_at_least_one_letter">Password must contain at least one letter.</string>
     <string name="password_at_least_one_number">Password must contain at least one number.</string>
     <string name="password_lenghth_error">Password is too short or empty.</string>
