--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/values/strings.xml
@@ -167,7 +167,7 @@
     </string-array>
     <string-array name="private_chat_settings_array">
         <item>Show profile</item>
-        <item>Invite</item>
+        <item>Invite users</item>
     </string-array>
     <string-array name="room_chat_settings_array">
         <item>Show profile</item>
